--- a/TheLastDrop.uproject.uproject
+++ b/TheLastDrop.uproject.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "5.6",
+	"EngineAssociation": "{E9FFAFEF-4AF0-5D64-5B61-AAB6CC9A8ADD}",
 	"Category": "",
 	"Description": "",
 	"Plugins": [
