--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 GameName=GGJ25_UCAStaff
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Dynamic/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
-GameDefaultMap=/Game/Dynamic/Levels/Levels/LV1_TheEntrance/Map/LV1_TheEntrance.LV1_TheEntrance
+EditorStartupMap=/Game/Dynamic/Levels/Levels/LV1_TheEntrance/Map/Project_Level.Project_Level
+GameDefaultMap=/Game/Dynamic/Levels/Levels/LV1_TheEntrance/Map/Project_Level.Project_Level
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
