--- a/TheLastDrop.uproject
+++ b/TheLastDrop.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "5.6",
+	"EngineAssociation": "{BAC0541E-4480-8BD5-16F4-FCB20A1EE70F}",
 	"Category": "",
 	"Description": "",
 	"Plugins": [
