--- a/TheLastDrop.uproject
+++ b/TheLastDrop.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "{C17A26F7-4F15-2AF2-63B1-C7BE8447EBA6}",
+	"EngineAssociation": "5.6",
 	"Category": "",
 	"Description": "",
 	"Plugins": [
