--- a/TheLastDrop.uproject
+++ b/TheLastDrop.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "5.6",
+	"EngineAssociation": "{C0FB8874-4901-DA89-999F-03AF6139EC7C}",
 	"Category": "",
 	"Description": "",
 	"Plugins": [
